# model

./: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  main.cpp  main1.cpp  mqttrecv.cpp  mqttsend.cpp
agv/: agv.cpp  agv.h
mqtt/: mqtt.cpp  mqtt.h
rob/: robot.cpp  robot.h
script/: CPS.py  Detect.py  README.md  Robot.py  robot.py  test1.py  test2.py  test3.py
script/config/: bearing_detection.yaml  number_detection.yaml  yolov5s.yaml
script/utils/: torch_utils.py
